# try.data-analysis

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
codeium-jupyter/: config.sample.json
notebook/: ames_housing.py  catcma.py  jupyter_ai.py
